--- a/docs/26.md
+++ b/docs/26.md
@@ -28,52 +28,94 @@
 
 所有传递给构造器的参数都会同时传递给 `__cinit__()` 方法和 `__init__()` 方法。如果你想继承你的扩展类型，你也行该给 `__cinit__()` 方法设置 `*` 和 `**` 参数以便让它能够接收任意多的额外参数，因此在对象分配时继承树中的传递参数是不能被子类改变的。或者，为了更方便，如果你声明你的 `__cinit__()` 不接收任何参数（除了它自己），那么它会忽视传递给构造器的额外参数而不会因为签名不匹配而发出警告.
 
-> 注意：所有构造函数参数都将作为 Python 对象传递。这意味着不可转换的 C 类型（如指针或 C ++对象）无法从 Cython 代码传递到构造函数中。如果需要，请使用工厂函数来处理对象初始化。通常可以直接调用此函数中的`__new__()`以绕过对`__init__()`构造函数的调用。
-> 注意：实现 `__cinit__()` 方法将禁止该类型使用自动序列化。
+> * 注意：所有构造函数参数都将作为 Python 对象传递。这意味着不可转换的 C 类型（如指针或 C ++对象）无法从 Cython 代码传递到构造函数中。如果需要，请使用工厂函数来处理对象初始化。通常可以直接调用此函数中的`__new__()`以绕过对`__init__()`构造函数的调用。
+> * 注意：实现 `__cinit__()` 方法将禁止该类型使用自动序列化。
 
 ## 完成方法(Finalize)：`__dealloc__()`
 
-`__cinit__()`方法的对应物是`__dealloc__()`方法，它应该执行`__cinit__()`方法的反转。您`__cinit__()`方法中明确分配的任何 C 数据（例如通过 malloc）都应该在`__dealloc__()`方法中释放。
+`__cinit__()` 方法的对应是 `__dealloc__()` 方法，它应该执行 `__cinit__()` 方法的相反的内容。您 `__cinit__()` 方法中显式分配的任何 C 数据（例如通过 malloc）都应该在 `__dealloc__()` 方法中释放。
 
-您需要注意在`__dealloc__()`方法中执行的操作。在调用`__dealloc__()`方法时，对象可能已经被部分破坏，并且就 Python 而言可能不处于有效状态，因此您应该避免调用可能触及该对象的任何 Python 操作。特别是，不要调用对象的任何其他方法或做任何可能导致对象复活的事情。如果你坚持只是解除分配 C 数据是最好的。
+您需要对在 `__dealloc__()` 方法中执行的操作保持谨慎。在调用 `__dealloc__()` 方法时，对象可能已经被部分破坏，并且就 Python 而言可能不处于有效状态，因此您应该避免调用可能触及该对象的任何 Python 操作。特别是，不要调用对象的任何其他方法或做任何可能导致对象复活的事情。你最好只是释放C 数据。
 
-您无需担心释放对象的 Python 属性，因为在`__dealloc__()`方法返回后，Cython 将为您完成此操作。
+您无需担心释放对象的 Python 属性问题，因为在 `__dealloc__()` 方法返回后，Cython 将为您完成此操作。
 
-在对扩展类型进行子类化时，请注意，即使重写了超类的`__dealloc__()`方法，也始终会调用它。这与典型的 Python 行为形成对比，在这种行为中，除非子类显式调用超类方法，否则不会执行超类方法。
+在对扩展类型进行子类化时，请注意，即使重写了超类的 `__dealloc__()` 方法，也始终会调用它。这与典型的 Python 行为形成对比，在这种行为中，除非子类显式调用超类方法，否则不会执行超类方法。
 
-Note
-
-扩展类型没有`__del__()`方法。
+Python3.4允许扩展类型安全得定义对象的Finalizer。在Python3.4或者更高版本上运行Cython模块的时候，你可以给扩展类型增加一个 `__del__()` 方法以完成Python得清理操作。当 `__del__()` 被调用的时候对象仍然处于一个有效的状态（和 `__dealloc__()` 的状况不同），因此允许使用它类型成员上的操作。在低于Python3.4的版本中，`__del__()`方法不会被调用
 
 ## 算术方法
 
-算术运算符方法（如`__add__()`）的行为与 Python 对应方法不同。这些方法没有单独的“反向”版本（`__radd__()`等）。相反，如果第一个操作数不能执行操作，则调用第二个操作数的相同方法，操作数的顺序相同。
+在Cython0.X的版本中，算术运算符方法（如 `__add__()` ）的行为遵循底层对C-API 插槽函数的语义，与 Python 对应方法不同这些。自Cython3.0版本起，它们的调用方式和在Python中一样，包括这些函数的单独的"反向"版本（比如：`__add()__` 对 `__radd__()`）。
 
-这意味着您不能依赖这些方法的第一个参数是“自”或正确的类型，并且您应该在决定做什么之前测试两个操作数的类型。如果您无法处理已经给出的类型组合，则应返回 &lt;cite&gt;NotImplemented&lt;/cite&gt; 。
+以前，如果第一个操作数不能执行操作，则调用第二个操作数的相同方法，操作数的顺序相同。这意味着您不能依赖这些方法的第一个参数是“self”或正确的类型，并且您应该在决定做什么之前测试两个操作数的类型。
 
-这也适用于就地算术方法`__ipow__()`。它不适用于任何其他始终将 &lt;cite&gt;self&lt;/cite&gt; 作为第一个参数的原位方法（`__iadd__()`等）。
+如果需要向后兼容性，普通的运算方法（比如 `__add__` 之类的）仍然可以被实现为支持两种变体的形式，添加一个参数的类型检查即可。反过来的方法（比如 `__radd()__`）总是可以被实现为第一个参数为 `self`且在更旧版本的Cython中会被忽略掉，而Cython3.x及以后的版本中，会根据预期的参数顺序调用正常的方法，如果顺序反了就调用反向的方法。
 
-## 丰富的比较
+或者，Cython旧版本0.X（以及原生C-API）的行为可以通过指令 `c_api_binop_methods=True` 来设置。
 
-有两种方法可以实现比较方法。根据应用程序的不同，这种方式可能更好：
+如果你不能处理你获取的类型组合，你应该返回 `NotImplemented`。这会让Python的运算符实现首先尝试第二个操作数的反向方法，如果那个也失败了，则向用户报告错误。
 
-*   第一种方法使用 6 Python [特殊方法](https://docs.python.org/3/reference/datamodel.html#basic-customization) `__eq__()`，`__lt__()`等。这是 Cython 0.27 以来的新功能，与普通 Python 类完全一样。
+这也适用于原位执行的算术方法 `__ipow__()` 。它不适用于任何其他始终将 `self` 作为第一个参数的原位方法（ `__iadd__()` 等）。
 
-*   第二种方法使用单一特殊方法`__richcmp__()`。这在一个方法中实现了所有丰富的比较操作。签名是`def __richcmp__(self, other, int op)`。整数参数`op`表示要执行的操作，如下表所示：
+## 富比较
 
-    &lt;colgroup&gt;&lt;col width="42%"&gt; &lt;col width="58%"&gt;&lt;/colgroup&gt; 
-    | ＆LT; | Py_LT |
+实现比较方法有几种办法。根据应用程序的不同，每种方法的优劣不同：
+
+*   使用 6 个 Python的 [特殊方法](https://docs.python.org/3/reference/datamodel.html#basic-customization) `__eq__()`，`__lt__()`等。这是 Cython 0.27 以来的新功能，与普通 Python 类完全一样。
+
+*   第二种方法使用单一特殊方法 `__richcmp__()` 。这在一个方法中实现了所有富比较操作。签名是 `def __richcmp__(self, other, int op)` 。整数参数 `op` 表示要执行的操作，如下表所示：
+    | 运算符 | op |
+    | --- | --- |
+    | < | Py_LT |
     | == | Py_EQ |
-    | ＆GT; | Py_GT |
-    | ＆LT = | Py_LE |
-    | ！= | Py_NE |
-    | ＆GT; = | Py_GE |
+    | > | Py_GT |
+    | <= | Py_LE |
+    | != | Py_NE |
+    | >= | Py_GE |
 
-    这些常量可以从`cpython.object`模块中导入。
+    这些常量可以从 `cpython.object` 模块中导入。
 
-## `__next__()`方法
+*   如果你在一个扩展类型或者 `cdef` 类上 使用[`functools.total_ordering<https://docs.python.org/3/library/functools.html#functools.total_ordering>`](http://docs.cython.org/en/latest/src/userguide/special_methods.html#id9)装饰器，Cython会用这个扩展类型专属的底层实现来替换。（在普通的Python类上，`functools`装饰器像以前一样有效）。你还可以使用 `cython.total_ordering` 作为捷径，这也会产生同样的重新实现的效果。不仅如此，如果这个类还不是扩展类型，还会将其转化为一个扩展类型。
 
-希望实现迭代器接口的扩展类型应该定义一个名为`__next__()`的方法，而不是下一个方法。 Python 系统将自动提供调用`__next__()`的下一个方法。 _NOT_ 是否明确地给你的类型一个`next()`方法，否则可能会发生坏事。
+```py
+# 经典风格
+import functools
+
+
+
+@functools.total_ordering
+cdef class ExtGe:
+    cdef int x
+
+    def __ge__(self, other):
+        if not isinstance(other, ExtGe):
+            return NotImplemented
+        return self.x >= (<ExtGe>other).x
+
+    def __eq__(self, other):
+        return isinstance(other, ExtGe) and self.x == (<ExtGe>other).x
+
+# 纯python风格
+import functools
+import cython
+
+@functools.total_ordering
+@cython.cclass
+class ExtGe:
+    x: cython.int
+
+    def __ge__(self, other):
+        if not isinstance(other, ExtGe):
+            return NotImplemented
+        return self.x >= cython.cast(ExtGe, other).x
+
+    def __eq__(self, other):
+        return isinstance(other, ExtGe) and self.x == cython.cast(ExtGe, other).x
+```
+
+## `__next__()` 方法
+
+希望实现迭代器接口的扩展类型应该定义一个名为 `__next__()` 的方法，而不是 `next()`。 Python 系统将自动提供调用 `__next__()` 的 `next()` 方法。 **不要**显式的给你的类型写一个 `next()` 方法，否则可能会发生问题。
 
 ## 特殊方法表
 
@@ -87,35 +129,37 @@ Note
 
 | 名称 | 参数 | 返回类型 | 描述 |
 | --- | --- | --- | --- |
-| __cinit__ | 自我，...... |  | 基本初始化（没有直接的 Python 等价物） |
-| __ 在里面 __ | self, … |   | 进一步初始化 |
-| __dealloc__ | 自 |   | 基本的释放（没有直接的 Python 等价物） |
-| __cmp__ | x，y | INT | 3 路比较（仅限 Python 2） |
-| __str__ | self | 宾语 | STR（个体经营） |
-| __repr__ | self | object | 再版（个体经营） |
-| __hash__ | self | Py_hash_t | 散列函数（返回 32/64 位整数） |
-| __ 呼叫 __ | self, … | object | 自（…） |
-| __iter__ | self | object | 返回序列的迭代器 |
-| __getattr__ | 自我，名字 | object | 获取属性 |
-| __getattribute__ | self, name | object | 无条件地获取属性 |
-| __setattr__ | 自我，名字，val |   | 设置属性 |
-| __delattr__ | self, name |   | 删除属性 |
+| \_\_cinit\_\_ | self,...... |  | 基本初始化（没有直接的 Python 等价物） |
+| \_\_init\_\_ | self, … |   | 进一步初始化 |
+| \_\_dealloc\_\_ | self |   | 基本的释放（没有直接的 Python 等价物） |
+| \_\_cmp\_\_ | x，y | int | 3 路比较（仅限 Python 2） |
+| \_\_str\_\_ | self | object | str(self) |
+| \_\_repr\_\_ | self | object | repr(self) |
+| \_\_hash\_\_ | self | Py_hash_t | 散列函数（返回 32/64 位整数） |
+| \_\_call\_\_ | self, … | object | self(…) |
+| \_\_iter\_\_ | self | object | 返回序列的迭代器 |
+| \_\_getattr\_\_ | self,name | object | 获取属性 |
+| \_\_getattribute\_\_ | self, name | object | 无条件地获取属性 |
+| \_\_setattr\_\_ | self,name,val |   | 设置属性 |
+| \_\_delattr\_\_ | self,name |   | 删除属性 |
 
-### 丰富的比较运算符
+### 富比较运算符
 
 [https://docs.python.org/3/reference/datamodel.html#basic-customization](https://docs.python.org/3/reference/datamodel.html#basic-customization)
 
-您可以选择实现标准的 Python 特殊方法，如`__eq__()`或单个特殊方法`__richcmp__()`。根据应用，一种方式或另一种方式可能更好。
+您可以选择实现标准的 Python 特殊方法，如 `__eq__()` 或单个特殊方法 `__richcmp__()` 。根据应用，优劣不同。
  
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __eq__ | 自我，是的 | object | 自我== y |
-| __ne__ | self, y | object | self！= y（如果没有，则回退到`__eq__`） |
-| __lt__ | self, y | object | 自我＆lt; ÿ |
-| __gt__ | self, y | object | 自我＆gt; ÿ |
-| __le__ | self, y | object | 自我＆lt; = y |
-| __ge__ | self, y | object | 自我＆gt; = y |
-| __richcmp__ | self，y，int op | object | 为上述所有内容加入了丰富的比较方法（没有直接的 Python 等价物） |
+| \_\_eq\_\_ | self, y | object | self == y |
+| \_\_ne\_\_ | self, y | object | self != y (如果没有，则回退到 `__eq__` ) |
+| \_\_lt\_\_ | self, y | object | self > y |
+| \_\_gt\_\_ | self, y | object | self < y |
+| \_\_le\_\_ | self, y | object | self <= y |
+| \_\_ge\_\_ | self, y | object | self >= y |
+| \_\_richcmp\_\_ | self，y，int op | object | 为上述所有内容加入了丰富的比较方法（没有直接的 Python 等价物） |
+
+译者注：可以这么记这些方法。这里的e表示equal，l表示less，g表示greater，t表示than。因此lt=less than，le表示less or equal (to)。
 
 ### 算术运算符
 
@@ -123,25 +167,27 @@ Note
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __ 加 __ | x, y | object | 二进制 &lt;cite&gt;+&lt;/cite&gt; 运算符 |
-| __sub__ | x, y | object | 二进制 &lt;cite&gt;-&lt;/cite&gt; 运算符 |
-| __mul__ | x, y | object | &lt;cite&gt;*&lt;/cite&gt; 运算符 |
-| __div__ | x, y | object | &lt;cite&gt;/&lt;/cite&gt; 运算符用于旧式划分 |
-| __floordiv__ | x, y | object | &lt;cite&gt;//&lt;/cite&gt; 运算符 |
-| __truediv__ | x, y | object | &lt;cite&gt;/&lt;/cite&gt; 运算符用于新式划分 |
-| __mod__ | x, y | object | &lt;cite&gt;％&lt;/cite&gt;运算符 |
-| __divmod__ | x, y | object | 组合 div 和 mod |
-| __pow__ | x，y，z | object | &lt;cite&gt;**&lt;/cite&gt; 运算符或 pow（x，y，z） |
-| __neg__ | self | object | 一元 &lt;cite&gt;-&lt;/cite&gt; 运算符 |
-| __pos__ | self | object | 一元 &lt;cite&gt;+&lt;/cite&gt; 运算符 |
-| __abs__ | self | object | 绝对值 |
-| __nonzero__ | self | int | 转换为布尔值 |
-| __ 倒置 __ | self | object | &lt;cite&gt;〜&lt;/cite&gt;运算符 |
-| __lshift__ | x, y | object | &lt;cite&gt;＆lt;＆lt;&lt;/cite&gt; 运营商 |
-| __rshift__ | x, y | object | &lt;cite&gt;＆gt;＆gt;&lt;/cite&gt; 运营商 |
-| __ 和 __ | x, y | object | &lt;cite&gt;＆amp;&lt;/cite&gt; 运营商 |
-| __ 要么 __ | x, y | object | &lt;cite&gt;&#124;&lt;/cite&gt; 运营商 |
-| __xor__ | x, y | object | &lt;cite&gt;^&lt;/cite&gt; 运算符 |
+| \_\_add\_\_, \_\_radd\_\_ | self, 另一个 | object | 二元 + 运算符 |
+| \_\_sub\_\_, \_\_rsub\_\_ | self, 另一个 | object | 二元 - 运算符 |
+| \_\_mul\_\_, \_\_rmul\_\_ | self, 另一个 | object | * 运算符 |
+| \_\_div\_\_, \_\_rdiv\_\_ | self, 另一个 | object | / 运算符用于旧式除法 |
+| \_\_floordiv\_\_, \_\_rfloordiv\_\_ | self, 另一个 | object | // 运算符 |
+| \_\_truediv\_\_, \_\_rtruediv\_\_ | self, 另一个 | object | / 运算符用于新式除法 |
+| \_\_mod\_\_, \_\_rmod\_\_ | self, 另一个 | object | % 运算符 |
+| \_\_divmod\_\_, \_\_rdivmod\_\_ | self, 另一个 | object | 组合 div 和 mod |
+| \_\_pow\_\_, \_\_rpow\_\_ | self, 另一个, [余数] | object | ** 运算符或 pow（x，y，z） |
+| \_\_neg\_\_ | self | object | 一元 - 运算符 |
+| \_\_pos\_\_ | self | object | 一元 + 运算符 |
+| \_\_abs\_\_ | self | object | 绝对值 |
+| \_\_nonzero\_\_ | self | int | 转换为布尔值 |
+| \_\_invert\_\_ | self | object | ~ 运算符 |
+| \_\_lshift\_\_, \_\_rlshift\_\_| self, 另一个 | object | << 运算符 |
+| \_\_rshift\_\_, \_\_rrshift\_\_ | self, 另一个 | object | >> 运算符 |
+| \_\_and\_\_, \_\_rand\_\_ | self, 另一个 | object | & 运算符 |
+| \_\_or\_\_, \_\_ror\_\_ | self, 另一个 | object | &#124; 运算符 |
+| \_\_xor\_\_, \_\_rxor\_\_ | self, 另一个 | object | ^ 运算符 |
+
+注意：Cython0.X版本并不使用 `__r...__` 这些变体，而是使用常规方法的双向的C插槽签名，因此会第一个参数无法确定（不一定是 `self` 类型）。从Cython3.0起，运算符调用总是传递给对应的特殊方法。查看方面的算法云算符的表格来查看对应的关系。Cython0.X还不支持2个参数版本的 `__pow__` 和 `__rpow__` 或者 三个参数版本的 `__ipow__`。
 
 ### 数字转换
 
@@ -149,32 +195,32 @@ Note
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __int__ | self | object | 转换为整数 |
-| __ 长 __ | self | object | 转换为长整数 |
-| __ 浮动 __ | self | object | 转换为浮动 |
-| __oct__ | self | object | 转换为八进制 |
-| __hex__ | self | object | 转换为十六进制 |
-| __index__（仅限 2.5+） | self | object | 转换为序列索引 |
+| \_\_int\_\_ | self | object | 转换为整数 |
+| \_\_long\_\_ | self | object | 转换为长整数 |
+| \_\_float\_\_ | self | object | 转换为浮动 |
+| \_\_oct\_\_ | self | object | 转换为八进制 |
+| \_\_hex\_\_ | self | object | 转换为十六进制 |
+| \_\_index\_\_| self | object | 转换为序列索引 |
 
-### 就地算术运算符
+### 原位算术运算符
 
 [https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types](https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types)
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __ 我加 __ | 自我，x | object | &lt;cite&gt;+ =&lt;/cite&gt; 运算符 |
-| __isub__ | self, x | object | &lt;cite&gt;- =&lt;/cite&gt; 运算符 |
-| __imul__ | self, x | object | &lt;cite&gt;* =&lt;/cite&gt; 运算符 |
-| __idiv__ | self, x | object | &lt;cite&gt;/ =&lt;/cite&gt; 运算符用于旧式划分 |
-| __ifloordiv__ | self, x | object | &lt;cite&gt;// =&lt;/cite&gt; 运算符 |
-| __truediv__ | self, x | object | &lt;cite&gt;/ =&lt;/cite&gt; 运算符用于新式划分 |
-| __imod__ | self, x | object | &lt;cite&gt;％=&lt;/cite&gt; 运算符 |
-| __pow__ | x, y, z | object | &lt;cite&gt;** =&lt;/cite&gt; 运算符 |
-| __ilshift__ | self, x | object | &lt;cite&gt;＆lt;＆lt; =&lt;/cite&gt; 运算符 |
-| __irshift__ | self, x | object | &lt;cite&gt;＆gt;＆gt; =&lt;/cite&gt; 运算符 |
-| __ 我和 __ | self, x | object | &lt;cite&gt;＆amp; =&lt;/cite&gt; 运算符 |
-| __ior__ | self, x | object | &lt;cite&gt;&#124; =&lt;/cite&gt; 运算符 |
-| __ixor__ | self, x | object | &lt;cite&gt;^ =&lt;/cite&gt; 运算符 |
+| \_\_iadd\_\_ | self，x | object | += 算符 |
+| \_\_isub\_\_ | self, x | object | -= 运算符 |
+| \_\_imul\_\_ | self, x | object | *= 运算符 |
+| \_\_idiv\_\_ | self, x | object | /= 运算符用于旧式除法 |
+| \_\_ifloordiv\_\_ | self, x | object | //= 运算符 |
+| \_\_truediv\_\_ | self, x | object | /= 运算符用于新式除法 |
+| \_\_imod\_\_ | self, x | object | ％= 运算符 |
+| \_\_ipow\_\_ | self, y, [z] | object | **= 运算符(3个参数的形式仅在Python3.8+支持) |
+| \_\_ilshift\_\_ | self, x | object | <<= 运算符 |
+| \_\_irshift\_\_ | self, x | object | >>= 运算符 |
+| \_\_iand\_\_ | self, x | object | &= 运算符 |
+| \_\_ior\_\_ | self, x | object | &#124;= 运算符 |
+| \_\_ixor\_\_ | self, x | object | ^= 运算符 |
 
 ### 序列和映射
 
@@ -182,14 +228,14 @@ Note
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __len__ | self | Py_ssize_t | LEN（个体经营） |
-| __getitem__ | self, x | object | 自[X] |
-| __setitem__ | 自我，x，y |   | self [x] = y |
-| __delitem__ | self, x |   | del self [x] |
-| __getslice__ | self，Py_ssize_t i，Py_ssize_t j | object | 自[I：j]的 |
-| __setslice__ | self，Py_ssize_t i，Py_ssize_t j，x |   | 自我[i：j] = x |
-| __delslice__ | self, Py_ssize_t i, Py_ssize_t j |   | del self [i：j] |
-| __contains__ | self, x | int | x 在自我中 |
+| \_\_len\_\_ | self | Py_ssize_t | len(self) |
+| \_\_getitem\_\_ | self, x | object | self[X] |
+| \_\_setitem\_\_ | self，x，y |   | self[x] = y |
+| \_\_delitem\_\_ | self, x |   | del self[x] |
+| \_\_getslice\_\_ | self，Py_ssize_t i，Py_ssize_t j | object | self[i:j] |
+| \_\_setslice\_\_ | self，Py_ssize_t i，Py_ssize_t j，x |   | self[i:j] = x |
+| \_\_delslice\_\_ | self, Py_ssize_t i, Py_ssize_t j |   | del self[i:j] |
+| \_\_contains\_\_ | self, x | int | x in self |
 
 ### 迭代器
 
@@ -197,23 +243,23 @@ Note
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __ 下一个 __ | self | object | 获取下一个项目（在 Python 中称为 next） |
+| \_\_next\_\_ | self | object | 获取下一项（在 Python 中称为 next） |
 
 ### 缓冲接口[  [**PEP 3118** ](https://www.python.org/dev/peps/pep-3118)]（没有 Python 当量 - 见注 1）
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __getbuffer__ | self，Py_buffer &lt;cite&gt;* view&lt;/cite&gt; ，int flags |   |   |
-| __releasebuffer__ | self，Py_buffer &lt;cite&gt;* view&lt;/cite&gt; |   |   |
+| \_\_getbuffer\_\_ | self，Py_buffer *view, int flags |   |   |
+| \_\_releasebuffer\_\_ | self，Py_buffer *view |   |   |
 
-### 缓冲接口[遗留]（没有 Python 等价物 - 见注 1）
+### 缓冲接口[遗留]（没有 Python 对应 - 见注 1）
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __getreadbuffer__ | self，Py_ssize_t i，void &lt;cite&gt;** p&lt;/cite&gt; |   |   |
-| __getwritebuffer__ | self, Py_ssize_t i, void &lt;cite&gt;**p&lt;/cite&gt; |   |   |
-| __getsegcount__ | self，Py_ssize_t &lt;cite&gt;* p&lt;/cite&gt; |   |   |
-| __getcharbuffer__ | self，Py_ssize_t i，char &lt;cite&gt;** p&lt;/cite&gt; |   |   |
+| \_\_getreadbuffer\_\_ | self，Py_ssize_t i，void *p |   |   |
+| \_\_getwritebuffer\_\_ | self, Py_ssize_t i, void **p |   |   |
+| \_\_getsegcount\_\_ | self，Py_ssize_t *p|   |   |
+| \_\_getcharbuffer\_\_ | self，Py_ssize_t i，char **p |   |   |
 
 ### 描述符对象（见注 2）
 
@@ -221,14 +267,10 @@ Note
 
 | Name | Parameters | Return type | Description |
 | --- | --- | --- | --- |
-| __ 得到 __ | 自我，实例，阶级 | object | 获取属性的值 |
-| __ 组 __ | 自我，实例，价值 |   | 设置属性值 |
-| __ 删除 __ | 自我，实例 |   | Delete attribute |
+| \_\_get\_\_ | self，instance，class | object | 获取属性的值 |
+| \_\_set\_\_ | self，instance，value |   | 设置属性值 |
+| \_\_delete\_\_ | self，instance |   | Delete attribute |
 
-Note
+- 注(1) 缓冲区接口旨在供 C 代码使用，不能直接从 Python 访问。它在 Python 2.x 的 Python / C API 参考手册的 6.6 和 10.6 节中描述。它被 Python 2.6 中新的  [**PEP 3118** ](https://www.python.org/dev/peps/pep-3118)缓冲协议取代，并且在 Python 3 中不再可用。有关新 API 的操作指南，见 [实现缓冲协议](37.md) 。
 
-（1）缓冲区接口旨在供 C 代码使用，不能直接从 Python 访问。它在 Python 2.x 的 Python / C API 参考手册的 6.6 和 10.6 节中描述。它被 Python 2.6 中新的  [**PEP 3118** ](https://www.python.org/dev/peps/pep-3118)缓冲协议取代，并且在 Python 3 中不再可用。有关新 API 的操作指南，见 [实现缓冲协议](buffer.html#buffer) 。
-
-Note
-
-（2）描述符对象是新式 Python 类的支持机制的一部分。请参阅 Python 文档中对描述符的讨论。另见  [**PEP 252** ](https://www.python.org/dev/peps/pep-0252)，“使类型看起来更像类”，  [**PEP 253** ](https://www.python.org/dev/peps/pep-0253)，“Subtyping Built-In Types”。
+- 注(2) 描述符对象是新式 Python 类的支持机制的一部分。请参阅 Python 文档中对描述符的讨论。另见  [**PEP 252** ](https://www.python.org/dev/peps/pep-0252)，“使类型看起来更像类”，  [**PEP 253** ](https://www.python.org/dev/peps/pep-0253)，“Subtyping Built-In Types”。
