Update 26.md - patch
sm

--- a/docs/26.md
+++ b/docs/26.md
@@ -187,7 +187,7 @@ class ExtGe:
 | \_\_or\_\_, \_\_ror\_\_ | self, 另一个 | object | &#124; 运算符 |
 | \_\_xor\_\_, \_\_rxor\_\_ | self, 另一个 | object | ^ 运算符 |
 
-注意：Cython0.X版本并不使用 `__r...__` 这些变体，而是使用常规方法的双向的C插槽签名，因此会第一个参数无法确定（不一定是 `self` 类型）。从Cython3.0起，运算符调用总是传递给对应的特殊方法。查看方面的算法云算符的表格来查看对应的关系。Cython0.X还不支持2个参数版本的 `__pow__` 和 `__rpow__` 或者 三个参数版本的 `__ipow__`。
+注意：Cython0.X版本并不使用 `__r...__` 这些变体，而是使用常规方法的双向的C插槽签名，因此第一个参数无法确定（不一定是 `self` 类型）。从Cython3.0起，运算符调用总是传递给对应的特殊方法。查看上面的算术运算符的表格来查看对应的关系。Cython0.X还不支持2个参数版本的 `__pow__` 和 `__rpow__` 或者 三个参数版本的 `__ipow__`。
 
 ### 数字转换
 
