--- a/docs/24.md
+++ b/docs/24.md
@@ -730,7 +730,7 @@ print(<object>ptr2)                    # prints "foo"
 
 要检查强制转换，请使用如下语法：`<MyExtensionType?>x`。在这种情况下，如果`x`不是`MyExtensionType`的实例，Cython 将应用运行时检查，该检查会引发`TypeError`。对于内置类型这会测试是否为确切类（不允许子类），对于[扩展类型](25.md) 则允许子类。
 
-## 陈述和表达式
+## 语句和表达式
 
 控件结构和表达式大部分都遵循 Python 语法。当应用于 Python 对象时，它们具有与 Python 相同的语义（除非另有说明）。大多数 Python 运算符也可以应用于 C 值，具有明显的语义。
 
