--- a/docs/28.md
+++ b/docs/28.md
@@ -254,13 +254,17 @@ cdef extern from "Python.h":
 
 将允许您创建包含空字节的 Python 字符串。
 
+请注意：在可以 `cimport` 的 `cpython.*` 模块中，Cython已经准备了几乎所有的 C-API 函数的声明。列表可以在[这里](https://github.com/cython/cython/tree/master/Cython/Includes/cpython)查看。
+
+你应该总是使用子模块（比如: `cpython.object` ， `cpython.list`）来访问这些函数。历史上，Cython曾经把一部分C-API的函数直接放在 `cpython` 模块中。但是，现在过时了，且将来会被移除。以后也不会在那里再增加了（译者注：现在放在子模块里）。
+
 ### 特殊类型
 
-Cython 预定义名称`Py_ssize_t`以用于 Python / C API 例程。要使扩展与 64 位系统兼容，应始终在 Python / C API 例程文档中指定的类型中使用此类型。
+Cython 预定义了 `Py_ssize_t` 这个名称以用于 Python / C API 例程。要使扩展类型与 64 位系统兼容，你应该根据 Python / C API 例程文档中指定的地方中使用这个类型。
 
 ### Windows 调用约定
 
-`__stdcall`和`__cdecl`调用约定说明符可以在 Cython 中使用，其语法与 Windows 上的 C 编译器使用的语法相同，例如：
+`__stdcall` 和 `__cdecl` 调用约定说明符可以在 Cython 中使用，其语法与 Windows 上的 C 编译器使用的语法相同，例如：
 
 ```py
 cdef extern int __stdcall FrobnicateWindow(long handle)
@@ -269,13 +273,13 @@ cdef void (__stdcall *callback)(void *)
 
 ```
 
-如果使用`__stdcall`，则仅认为该功能与相同签名的其他`__stdcall`功能兼容。
+如果使用 `__stdcall`，则仅认为该功能与相同签名的其他 `__stdcall` 功能兼容。
 
-### 解决命名冲突 - C 名称规范
+### 解决命名冲突 - C 命名规范
 
-每个 Cython 模块都有一个用于 Python 和 C 名称的模块级命名空间。如果要包装一些外部 C 函数并为 Python 用户提供相同名称的 Python 函数，这可能会很不方便。
+每个 Cython 模块都有一个用于 Python 和 C 名称的模块级命名空间。如果要包装一些外部 C 函数并为 Python 用户提供相同名称的 Python 函数的话，这可能会很不方便。
 
-Cython 提供了几种解决此问题的方法。最好的方法，特别是如果要包装许多 C 函数，是将外部 C 函数声明放入`.pxd`文件，从而使用 [中描述的设备在 Cython 模块之间共享声明中使用不同的命名空间](sharing_declarations.html#sharing-declarations) 。将它们写入`.pxd`文件允许它们跨模块重用，避免以正常的 Python 方式命名冲突，甚至可以轻松地在 cimport 上重命名它们。例如，如果您的`decl.pxd`文件声明了 C 函数`eject_tomato`：
+Cython 提供了几种解决此问题的方法。最好的方法，特别是如果要包装许多 C 函数，是将外部 C 函数声明放入`.pxd`文件，通过在[在 Cython 模块之间共享声明](27.md#)中描述的机理，放函数放入一个不同的命名空间 。将它们写入`.pxd`文件允许它们跨模块重用，避免以正常的 Python 方式命名冲突，甚至可以轻松地在 cimport 时重命名它们。例如，如果您在 `decl.pxd` 文件声明了 C 函数 `eject_tomato`：
 
 ```py
 cdef extern from "myheader.h":
@@ -283,7 +287,7 @@ cdef extern from "myheader.h":
 
 ```
 
-然后你可以将它导入并将其包装在`.pyx`文件中，如下所示：
+然后你可以将它导入并将其包装在 `.pyx` 文件中，如下所示：
 
 ```py
 from decl cimport eject_tomato as c_eject_tomato
@@ -293,7 +297,7 @@ def eject_tomato(speed):
 
 ```
 
-或者只是简单地输入`.pxd`文件并将其用作前缀：
+或者只是简单地输入 `.pxd` 文件并将其用作前缀：
 
 ```py
 cimport decl
@@ -303,9 +307,9 @@ def eject_tomato(speed):
 
 ```
 
-请注意，这没有运行时查找开销，就像在 Python 中一样。 Cython 在编译时解析`.pxd`文件中的名称。
+请注意，这没有像在 Python 中一样运行时查找的额外开销。 Cython 在编译时解析 `.pxd` 文件中的名称。
 
-对于导入时命名空间或重命名不够的特殊情况，例如当 C 中的名称与 Python 关键字冲突时，您可以使用 C 名称规范在声明时为 C 函数提供不同的 Cython 和 C 名称。例如，假设您要包装一个名为`yield()`的外部 C 函数。如果您将其声明为：
+对于导入时命名空间或重命名也不足够的特殊情况，例如当 C 中的名称与 Python 关键字冲突时，您可以使用 C 名称规范在声明时为 C 函数提供不同的 Cython 和 C 名称。例如，假设您要包装一个名为 `yield()` 的外部 C 函数。如果您将其声明为：
 
 ```py
 cdef extern from "myheader.h":
@@ -313,7 +317,7 @@ cdef extern from "myheader.h":
 
 ```
 
-那么它的 Cython 可见名称将是`c_yield`，而它在 C 中的名称将是`yield`。然后你可以用它包装它：
+那么它的 Cython 可见名称将是 `c_yield` ，而它在 C 中的名称将是 `yield` 。然后你可以用它包装它：
 
 ```py
 def call_yield(speed):
@@ -321,7 +325,7 @@ def call_yield(speed):
 
 ```
 
-对于函数，可以为变量，结构，联合，枚举，结构和联合成员以及枚举值指定 C 名称。例如：
+对于函数，可以为变量，结构，共用体，枚举，结构和共用体成员以及枚举值指定 C 名称。例如：
 
 ```py
 cdef extern int one "eins", two "zwei"
@@ -336,7 +340,7 @@ cdef enum surprise "inquisition":
 
 ```
 
-请注意，Cython 不会对您提供的字符串进行任何验证或名称修改。它会将裸文本注入未经修改的 C 代码中，因此您完全可以使用此功能。如果你想声明一个名称`xyz`并让 Cython 将文本“让 C 编译器在这里失败”注入它的 C 文件中，你可以使用 C 名声明来完成。考虑这是一个高级功能，仅适用于其他一切都失败的罕见情况。
+请注意，Cython 不会对您提供的字符串进行任何验证或名称修改。它会将裸文本注入未经修改的 C 代码中，因此在这个功能中你不会得到系统的帮助。如果你想声明一个名称 `xyz` 并让 Cython 将文本“让 C 编译器在这里失败”注入它的 C 文件中，你可以使用 C 命名声明来完成。考虑这是一个高级功能，请**只在其他一切都失败的罕见情况**下考虑使用。
 
 ### 包括逐字 C 代码
 
