--- a/docs/28.md
+++ b/docs/28.md
@@ -342,15 +342,15 @@ cdef enum surprise "inquisition":
 
 请注意，Cython 不会对您提供的字符串进行任何验证或名称修改。它会将裸文本注入未经修改的 C 代码中，因此在这个功能中你不会得到系统的帮助。如果你想声明一个名称 `xyz` 并让 Cython 将文本“让 C 编译器在这里失败”注入它的 C 文件中，你可以使用 C 命名声明来完成。考虑这是一个高级功能，请**只在其他一切都失败的罕见情况**下考虑使用。
 
-### 包括逐字 C 代码
+### 直接写头文件中的 C 代码
 
-对于高级用例，Cython 允许您直接将 C 代码写为`cdef extern from`块的“docstring”：
+对于更复杂的使用场景，Cython 允许您直接用 `cdef extern from` 块的 “docstring” 来直接写 C 代码：
 
 ```py
 cdef extern from *:
     """
- /* This is C code which will be put
- * in the .c file output by Cython */
+ /* 这个是Cython将会输出到.c文件的
+ * C 语言代码 */
  static long square(long x) {return x * x;}
  #define assign(x, y) ((x) = (y))
  """
@@ -359,7 +359,7 @@ cdef extern from *:
 
 ```
 
-以上内容基本上等同于将 C 代码放在文件`header.h`中并进行写入
+以上内容基本上等同于将这段 C 代码放在文件 `header.h` 中，并在py文件中写入
 
 ```py
 cdef extern from "header.h":
@@ -373,7 +373,7 @@ cdef extern from "header.h":
 ```py
 cdef extern from "badheader.h":
     """
- /* This macro breaks stuff */
+ /* 这行宏命令会搞坏代码 */
  #undef int
  """
     # Stuff from badheader.h
@@ -382,37 +382,72 @@ cdef extern from "badheader.h":
 
 在这种情况下，C 代码`#undef int`放在 Cython 生成的 C 代码中的`#include "badheader.h"`之后。
 
+这种直接在头文件中写代码的技巧还可以用来适配特定的版本。库中加入了一个struct结构字段，但是旧版本中并没有的时候，可以把根据版本号
+来有条件的加入修改项的 C 语言代码直接写在头文件中。
+
+```py
+cdef extern from "struct_field_adaptation.h":
+    """
+    #define HAS_NEWLY_ADDED_FIELD  (C_LIB_VERSION >= 20)
+
+    #if HAS_NEWLY_ADDED_FIELD
+        #define _mylib_get_newly_added_field(a_struct_ptr)  ((a_struct_ptr)->newly_added_field)
+        #define _mylib_set_newly_added_field(a_struct_ptr, value)  ((a_struct_ptr)->newly_added_field) = (value)
+    #else
+        #define _mylib_get_newly_added_field(a_struct_ptr)  (0)
+        #define _mylib_set_newly_added_field(a_struct_ptr, value)  ((void) (value))
+    #endif
+    """
+
+    # Normal declarations provided by the C header file:
+    ctypedef struct StructType:
+        int field1
+        int field2
+
+    StructType *get_struct_ptr()
+
+    # Special declarations conditionally provided above:
+    bint HAS_NEWLY_ADDED_FIELD
+    int get_newly_added_field "_mylib_get_newly_added_field" (StructType *struct_ptr)
+    void set_newly_added_field "_mylib_set_newly_added_field" (StructType *struct_ptr, int value)
+
+
+cdef StructType *some_struct_ptr = get_struct_ptr()
+
+print(some_struct_ptr.field1)
+if HAS_NEWLY_ADDED_FIELD:
+    print(get_newly_added_field(some_struct_ptr))
+```
+
 请注意，该字符串的解析方式与 Python 中的任何其他 docstring 一样。如果要将字符转义传递到 C 代码文件，请使用原始文档字符串，即`r""" ... """`。
 
-## 使用 C
+## 在C中使用Cython声明
 
-Cython 提供了两种方法，用于从 Cython 模块生成 C 语句，供外部 C 代码 - 公共声明和 C API 声明使用。
+Cython 提供了两种方法，用于将 Cython 模块生成 C 语句提供外部 C 代码使用 - 公共声明和 C API 声明使用。
 
-Note
-
-你不需要使用其中任何一个来从一个 Cython 模块声明另一个 Cython 模块 - 你应该使用 [`cimport`](sharing_declarations.html#cimport) 语句。在 Cython 模块之间共享声明。
+> 请注意：这两种方法不是用来从一个 Cython 模块声明另一个 Cython 模块的 - 你使用 `cimport` 就行。查看[在Cython模块之间共享声明](27.md)。
 
 ### 公开声明
 
-您可以通过使用 public 关键字声明它们，使 Cython 模块中定义的 C 类型，变量和函数可以被 C 代码访问，C 代码与 Cython 生成的 C 文件链接在一起：
+您可以通过使用 public 关键字声明它们 -- 使得 Cython 模块中定义的 C 类型，变量和函数，对于与 Cython 生成的 C 文件链接在一起的 C 代码可见：
 
 ```py
-cdef public struct Bunny: # public type declaration
+cdef public struct Bunny: # 公开类型声明
     int vorpalness
 
-cdef public int spam # public variable declaration
+cdef public int spam # 公开变量声明
 
-cdef public void grail(Bunny *) # public function declaration
+cdef public void grail(Bunny *) # 公开函数声明
 
 ```
 
-如果 Cython 模块中有任何公共声明，则会生成一个名为`modulename.h`文件的头文件，其中包含等效的 C 声明，以包含在其他 C 代码中。
+如果 Cython 模块中有任何公共声明，则会生成一个名为 `模块名.h` 文件的头文件，其中包含等效的 C 声明，以包含在其他 C 代码中。
 
-一个典型的用例是从多个 C 源构建一个扩展模块，其中一个是 Cython 生成的（即`setup.py`中有`Extension("grail", sources=["grail.pyx", "grail_helper.c"])`的东西。在这种情况下，文件`grail_helper.c`只需要添加`#include "grail.h"` ]为了访问公共 Cython 变量。
+一个典型的使用场景是从多个 C 源文件出发构建一个扩展模块，其中一个是 Cython 生成的（即 `setup.py` 中有 `Extension("grail", sources=["grail.pyx", "grail_helper.c"])` 。在这种情况下，文件`grail_helper.c` 只需要添加 `#include "grail.h"` 来访问公共 Cython 变量。
 
-更高级的用例是使用 Cython 在 Python 中嵌入 Python。在这种情况下，请确保调用 Py_Initialize（）和 Py_Finalize（）。例如，在包含`grail.h`的以下代码段中：
+更高级的使用场景是用 Cython 来实现在 C 中内嵌Python。在这种情况下，请确保调用 Py_Initialize() 和 Py_Finalize()。例如，在包含 `grail.h` 的以下代码段中：
 
-```py
+```c
 #include <Python.h>
 #include "grail.h"
 
@@ -426,7 +461,7 @@ int main() {
 
 ```
 
-然后，可以在单个程序（或库）中将此 C 代码与 Cython 生成的 C 代码一起构建。
+然后，可以在单个程序（或库）中将此 C 代码与 Cython 生成的 C 代码一起构建。请注意这个程序不会包含你的模块使用的任何外部依赖。因此，对于大多数场景来说还不能输出一个完全可移植的程序（你需要自己处理依赖）。
 
 在 Python 3.x 中，应该避免直接调用模块 init 函数。相反，使用 [inittab 机制](https://docs.python.org/3/c-api/import.html#c._inittab)将 Cython 模块链接到单个共享库或程序中。
 
@@ -437,21 +472,41 @@ grail_module = PyImport_ImportModule("grail");
 
 ```
 
-如果 Cython 模块位于包中，则`.h`文件的名称由模块的完整点名称组成，例如，名为`foo.spam`的模块将有一个名为`foo.spam.h`的头文件。
+如果 Cython 模块位于包中，则`.h`文件的名称由模块的完整的名称（用点号分隔）组成，例如，名为 **`foo.spam`** 的模块将有一个名为 `foo.spam.h` 的头文件。
 
-Note
+> 请注意：在某些操作系统（如 Linux）上，也可以先按常规方式构建 Cython 扩展，然后像动态库一样链接到生成的 `.so` 文件。请注意，这不可移植，应该尽量避免。
 
-在某些操作系统（如 Linux）上，也可以先按常规方式构建 Cython 扩展，然后像动态库一样链接到生成的`.so`文件。请注意，这不是便携式的，所以应该避免。
+### C ++ 公开声明
+
+当文件用以C ++的方式编译时，它里面的公开函数会默认以C ++ API的形式声明(使用 `external "C++"`)。这会禁止在 C 语言代码中调用这些函数。如果这些函数是设计为普通的 C API，那么这个 `external` 声明需要用户自己手动注明 --  在编译产生的C ++文件的时候，对于 `external "C"` 设置 `CYTHON_EXTERN_C` 宏：
+
+```py
+from setuptools import Extension, setup
+from Cython.Build import cythonize
+
+extensions = [
+    Extension(
+        "module", ["module.pyx"],
+        define_macros=[("CYTHON_EXTERN_C", 'extern "C"')],
+        language="c++",
+    )
+]
+
+setup(
+    name="My hello app",
+    ext_modules=cythonize(extensions),
+)
+```
 
 ### C API 声明
 
-为 C 代码提供声明的另一种方法是使用 [`api`](#api) 关键字声明它们。您可以将此关键字与 C 函数和扩展类型一起使用。生成一个名为`modulename_api.h`的头文件，其中包含函数和扩展类型的声明，以及一个名为`import_modulename()`的函数。
+为 C 代码提供声明的另一种方法是使用 **`api`** 关键字声明它们。您可以将此关键字与 C 函数和扩展类型一起使用。生成一个名为 `modulename_api.h` 的头文件，其中包含函数和扩展类型的声明，以及一个名为`import_modulename()`的函数。(译者注：这里的 `modulename` 是模块名的意思，不是字面意思，下面同理。）
 
-想要使用这些函数或扩展类型的 C 代码需要包含标题并调用`import_modulename()`函数。然后可以调用其他函数，并像往常一样使用扩展类型。
+想要使用这些函数或扩展类型的 C 代码需要包含（ `#Include` ）头文件并调用 `import_modulename()` 函数。然后可以调用其他函数，并像往常一样使用扩展类型。
 
-如果想要使用这些函数的 C 代码是多个共享库或可执行文件的一部分，则需要在使用这些函数的每个共享库中调用`import_modulename()`函数。如果在调用其中一个 api 调用时遇到分段错误（linux 上的 SIGSEGV）崩溃，这可能表明包含生成分段错误的 api 调用的共享库之前没有调用`import_modulename()`函数崩溃的 api 电话。
+如果想要使用这些函数的 C 代码是多个共享库或可执行文件的一部分，则需要在**使用这些函数的每个共享库中**调用 `import_modulename()` 函数。如果在调用其中一个 api 时遇到分段错误（linux 上的 SIGSEGV）崩溃，这可能表明：包含生成分段错误的 api 调用的共享库没有在调用api之前调用 `import_modulename()` 。
 
-当您包含`modulename_api.h`时，Cython 模块中的任何公共 C 类型或扩展类型声明也可用。
+当您包含 `modulename_api.h` 时，Cython 模块中的任何公共 C 类型或扩展类型声明也可用。
 
 ```py
 # delorean.pyx
@@ -466,8 +521,8 @@ cdef api void activate(Vehicle *v):
 
 ```
 
-```py
-# marty.c
+```c
+// marty.c
 #include "delorean_api.h"
 
 Vehicle car;
@@ -483,13 +538,11 @@ int main(int argc, char *argv[]) {
 
 ```
 
-Note
+> 请注意：任何定义在Cython中、作为被输出（被外部C代码调用）函数的参数或者返回类型的类型都需要声明为 public，否则它们将不会包含在生成的头文件中，并且当您尝试编译时使用该头文件的的C文件时会遇到编译错误。
 
-在 Cython 模块中定义的任何类型（用作参数或返回类型的导出函数）都需要声明为 public，否则它们将不会包含在生成的头文件中，并且当您尝试编译时会出现错误使用标头的 C 文件。
+使用 `api` 方法不需要使用声明的 C 代码以任何方式与扩展模块链接，因为 Python 导入机制已经被用于动态得建立链接。只能以这种方式访问​​函数，没法访问变量。另请注意，要正确设置模块导入机制，用户必须调用 Py_Initialize() 和 Py_Finalize();如果您在 `import_modulename()` 调用中遇到分段错误，则很可能没有做两步。
 
-使用 [`api`](#api) 方法不需要使用声明的 C 代码以任何方式与扩展模块链接，因为 Python 导入机制用于动态建立连接。但是，只能以这种方式访问​​函数，而不是变量。另请注意，要正确设置模块导入机制，用户必须调用 Py_Initialize（）和 Py_Finalize（）;如果您在`import_modulename()`调用中遇到分段错误，则很可能没有完成。
-
-您可以在同一功能上同时使用 [`public`](extension_types.html#public) 和 [`api`](#api) ，例如：
+您可以在同一功能上同时使用 `public`) 和 `api` ，例如：
 
 ```py
 cdef public api void belt_and_braces():
@@ -497,18 +550,18 @@ cdef public api void belt_and_braces():
 
 ```
 
-但是，请注意，您应该在给定的 C 文件中包含`modulename.h`或`modulename_api.h`，而不是两者，否则您可能会遇到冲突的双重定义。
+但是，请注意，您应该在给定的 C 文件中包含 `modulename.h` 或 `modulename_api.h`，但是不同包含，否则您可能会遇到彼此冲突的双重定义。
 
 如果 Cython 模块位于包中，则：
 
-*   头文件的名称包含模块的完整虚线名称。
-*   导入函数的名称包含全名，其中圆点由双下划线替换。
+*   头文件的名称包含模块的完整（用点号表明格式）的名称。
+*   导入函数的名称包含全名，其中点号由双下划线替换。
 
-例如。名为`foo.spam`的模块将有一个名为`foo.spam_api.h`的 API 头文件和一个名为`import_foo__spam()`的导入函数。
+例如。名为 `foo.spam` 的模块将有一个名为 `foo.spam_api.h` 的 API 头文件和一个名为 `import_foo__spam()` 的导入函数。
 
 ### 多个公共和 API 声明
 
-您可以将 [`public`](extension_types.html#public) 和/或 [`api`](#api) 的整个项目一次性地声明为 [`cdef`](language_basics.html#cdef) 块，例，：
+把一组声明的囊括在一个 `cdef` 代码块中，你可以将它们一次性地声明 `public` 和/或 `api`，例如：
 
 ```py
 cdef public api:
@@ -517,29 +570,31 @@ cdef public api:
 
 ```
 
-这在`.pxd`文件中是有用的（参见 [在 Cython 模块之间共享声明](sharing_declarations.html#sharing-declarations) ），以通过所有三种方法使模块的公共接口可用。
+这在`.pxd`文件中是有用的（参见 [在 Cython 模块之间共享声明](27.md) ），以通过所有三种方法使模块的公共接口可用。
 
 ### 获取和释放 GIL
 
-Cython 提供了获取和发布[全球解释器锁（GIL）](https://docs.python.org/dev/glossary.html#term-global-interpreter-lock)的工具。当从多线程代码调用可能阻塞的（外部 C）代码或者想要从（本机）C 线程回调中使用 Python 时，这可能很有用。释放 GIL 显然应仅针对线程安全代码或针对竞争条件和并发问题使用其他保护手段的代码。
+Cython 提供了获取和发布[全局解释器锁（GIL）](https://docs.python.org/dev/glossary.html#term-global-interpreter-lock)的工具。当从多线程代码调用可能阻塞的（外部 C）代码或者想要从（原生）C 线程回调中使用 Python 时，这可能很有用。显然，应该仅针对线程安全代码、或者对于数据竞争问题和并发问题已经使用了其他保护手段的代码释放GIL。
 
-请注意，获取 GIL 是阻塞线程同步操作，因此可能成本高昂。对于次要计算，可能不值得发布 GIL。通常，并行代码中的 I / O 操作和实质计算将从中受益。
+请注意，获取 GIL 是阻塞线程同步操作，因此可能成本高昂。对于不复杂的计算，释放GIL可不划算。通常，并行代码中的 I / O 操作和复杂计算将从中受益。
 
 #### 释放 GIL
 
-您可以使用`with nogil`语句围绕一段代码释放 GIL：
+您可以使用 `with nogil` 语句包裹一段代码来释放 GIL：
 
 ```py
 with nogil:
-    <code to be executed with the GIL released>
+    <在释放了GIL的情况下执行的代码>
 
 ```
 
-with 语句主体中的代码不得以任何方式引发异常或操纵 Python 对象，并且在不首先重新获取 GIL 的情况下不得调用任何操作 Python 对象的内容。例如，Cython 在编译时验证这些操作，但不能查看外部 C 函数。必须正确声明它们需要或不需要 GIL（见下文）才能使 Cython 的检查生效。
+with 语句主体中的代码不得以任何方式（直接或者间接）引发异常或操纵 Python 对象（直接） -- 也不能调用任何会操作Python对象的函数（间接） -- 除非首先获取GIL。Cython 在编译时会验证这些操作，但不能查看外部 C 函数。必须正确声明它们需要或不需要 GIL（见下文）才能使 Cython 的检查生效。
+
+从Cython3.0版本起，一些简单的Python一句可以在 `nogil` 的代码块中使用了：`raise`, `assert` 和 `print` （Python2的print语句，而不是Py3的print函数）。由于它们通常是独立使用的Python语句，Cython会为它们自动的获取、释放GIL。
 
 #### 获取 GIL
 
-在没有 GIL 的情况下执行的 C 代码回调的 C 函数需要在操作 Python 对象之前获取 GIL。这可以通过在函数头中指定`with gil`来完成：
+在没有 GIL 的情况下执行的 C 代码回调的 C 函数需要在操作 Python 对象之前获取 GIL。这可以通过在函数头中指定 `with gil` 来完成：
 
 ```py
 cdef void my_callback(void *data) with gil:
@@ -547,9 +602,9 @@ cdef void my_callback(void *data) with gil:
 
 ```
 
-如果可以从另一个非 Python 线程调用回调，则必须首先通过调用 [PyEval_InitThreads（）](https://docs.python.org/dev/c-api/init.html#c.PyEval_InitThreads)来初始化 GIL。如果您已经在模块中使用 [cython.parallel](parallelism.html#parallel)，那么这已经得到了解决。
+如果可以从另一个非 Python 线程调用回调，则必须首先通过调用 [PyEval_InitThreads()](https://docs.python.org/dev/c-api/init.html#c.PyEval_InitThreads)来初始化 GIL。如果您已经在模块中使用 [cython.parallel](38.md)，那么不存在这个问题。
 
-GIL 也可以通过`with gil`声明获得：
+GIL 也可以通过 `with gil` 声明获得：
 
 ```py
 with gil:
@@ -557,11 +612,11 @@ with gil:
 
 ```
 
-#### 条件获取/释放 GIL
+#### 有条件地获取/释放 GIL
 
 有时使用条件来决定是否使用 GIL 运行某段代码。这个代码无论如何都会运行，不同之处在于 GIL 是否会被保留或释放。条件必须是常量（在编译时）。
 
-这对于分析，调试，性能测试和融合类型非常有用（参见 [条件 GIL 获取/释放](fusedtypes.html#fused-gil-conditional) ）：
+这对于分析，调试，性能测试和融合类型非常有用（参见 [有条件 GIL 获取/释放](32.md) ）：
 
 ```py
 DEF FREE_GIL = True
@@ -574,9 +629,9 @@ with nogil(FREE_GIL):
 
 ```
 
-### 在没有 GIL 的情况下将函数声明为可调用
+### 将函数声明为可以在没有GIL的情况下调用
 
-您可以在 C 函数头或函数类型中指定 [`nogil`](#nogil) ，以声明在没有 GIL 的情况下调用是安全的：
+您可以在 C 函数头或函数类型中指定 **`nogil`** ，以声明在没有 GIL 的情况下调用是安全的：
 
 ```py
 cdef void my_gil_free_func(int spam) nogil:
@@ -584,10 +639,8 @@ cdef void my_gil_free_func(int spam) nogil:
 
 ```
 
-在 Cython 中实现这样的函数时，它不能有任何 Python 参数或 Python 对象返回类型。此外，涉及 Python 对象（包括调用 Python 函数）的任何操作必须首先明确获取 GIL，例如通过使用`with gil`块或调用已定义的函数`with gil`。这些限制由 Cython 检查，如果在`nogil`代码部分中发现任何 Python 交互，您将收到编译错误。
+在 Cython 中实现这样的函数时，它不能有任何 Python 参数或 Python 对象返回类型。此外，涉及 Python 对象（包括调用 Python 函数）的任何操作必须首先明确获取 GIL -- 例如使用 `with gil` 块或调用已定义为 `with gil` 的函数。这些限制由 Cython 检查，如果在 `nogil` 代码部分中发现任何 Python 交互，您将收到编译错误。
 
-Note
+> 请注意：`nogil` 函数注解只是声明在没有 GIL 的情况下调用函数是安全的（并不代表使用它的时候就必须释放GIL）。完全允许在持有 GIL 的同时执行它。如果调用者持有 GIL，则该函数本身不释放 GIL。
 
-`nogil`函数注释声明在没有 GIL 的情况下调用函数是安全的。完全允许在持有 GIL 的同时执行它。如果调用者持有 GIL，则该函数本身不释放 GIL。
-
-声明函数`with gil`（即在输入时获取 GIL）也隐式地使其签名 [`nogil`](#nogil) 。
+将函数声明为 `with gil`（即在输入时获取 GIL）也隐式地使其函数签名 `nogil` 。
